rnsc/tests/snapshots/error-parser-type_hints-fieldref-trailing_token_recovers.snap
---
source: rnsc/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
.class @fieldref MyClass fieldName Ljava/io/PrintStream; trailing
----- STDERR -----
[E-013] Error: unexpected trailing tokens after type hint '@fieldref'
   ╭─[ test_data/integration/error/parser/type_hints/fieldref/trailing_token_recovers.rns:1:58 ]
   │
 1 │ .class @fieldref MyClass fieldName Ljava/io/PrintStream; trailing
   │        ────┬────                                         ────┬───  
   │            ╰─────────────────────────────────────────────────────── '@fieldref' type hint takes 3 operands
   │                                                              │     
   │                                                              ╰───── but found 1 trailing token
   │ 
   │ Help: Remove the trailing tokens or move them to a valid context.
   │ 
   │ Note: For more details see:
   │       https://rune.lagertha-vm.com/errors/E-013
───╯
[W-001] Warning: missing super directive
   ╭─[ test_data/integration/error/parser/type_hints/fieldref/trailing_token_recovers.rns:1:1 ]
   │
 1 │ .class @fieldref MyClass fieldName Ljava/io/PrintStream; trailing
   │ ───┬──  
   │    ╰──── class 'MyClass fieldName Ljava/io/PrintStream;' is missing a '.super' directive
   │ 
   │ Note: The .super directive is required to specify the superclass. Defaulting to 'java/lang/Object'.
───╯
----- HASH -----
not generated
