rnsc/tests/snapshots/error-parser-type_hints-float-overflow.snap
---
source: rnsc/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
.class @float 9999999999999999999999999999999999999999
.super java/lang/Object
----- STDERR -----
[E-003] Error: '@float' requires a 32-bit float, but '9999999999999999999999999999999999999999' is out of range
   ╭─[ test_data/rns_integration/error/parser/type_hints/float/overflow.rns:1:8 ]
   │
 1 │ .class @float 9999999999999999999999999999999999999999
   │        ───┬── ────────────────────┬───────────────────  
   │           ╰───────────────────────────────────────────── forces explicit float constant pool type
   │                                   │                     
   │                                   ╰───────────────────── but '9999999999999999999999999999999999999999' is out of range
   │ 
   │ Help: If you need a larger float, use @double instead:
   │       @double 9999999999999999999999999999999999999999
   │ 
   │ Note: For more details see:
   │       https://rune.lagertha-vm.com/errors/E-003
───╯
----- JAVAP -----
not generated
